[package]
name = "raven"
version = "0.2.1"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]
license = "MIT"
description = "Raven is a Rust client for Sentry (getsentry.com)"
repository = "https://github.com/r-darwish/raven-rust"

[dependencies]
regex = "*"
time = "*"
uuid = { version = "0.2", features = ["v4"] }
rustc-serialize = "*"
libc = "*"
hyper = "*"
